5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1836_1273.log
== SUBMITION (2019-06-25 11:25:32) 
-- CODE:
from numpy import*
from numpy.linalg import

v = array([50, -120, 350, 870])
v = v.T

eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]])
v = dot(inv(eq), saida)
print(v)
-- EXECUTION TIME:
0.54767
-- ERROR:
  File "/home/codebench/codes/1836/1273/main.py", line 2
    from numpy.linalg import
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:26:44) 
-- CODE:
from numpy import*
from numpy.linalg import

v = array([50, -120, 350, 870])
v = v.T

eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]])
v = dot(inv(eq), saida)
print(v)
-- EXECUTION TIME:
0.579218
-- ERROR:
  File "/home/codebench/codes/1836/1273/main.py", line 2
    from numpy.linalg import
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:27:26) 
-- CODE:
from numpy import*
from numpy.linalg import

v = array([50, -120, 350, 870])
v = v.T

eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]])
v = dot(inv(eq), v.T)
print(v)
-- EXECUTION TIME:
0.592746
-- ERROR:
  File "/home/codebench/codes/1836/1273/main.py", line 2
    from numpy.linalg import
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:27:31) 
-- CODE:
from numpy import*
from numpy.linalg import

v = array([50, -120, 350, 870])
v = v.T

eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]])
v = dot(inv(eq), v.T)
print(v)
-- EXECUTION TIME:
0.611536
-- ERROR:
  File "/home/codebench/codes/1836/1273/main.py", line 2
    from numpy.linalg import
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:27:32) 
-- CODE:
from numpy import*
from numpy.linalg import

v = array([50, -120, 350, 870])
v = v.T

eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]])
v = dot(inv(eq), v.T)
print(v)
-- ERROR:
File "XXXX", line 2
    from numpy.linalg import
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:27:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([50, -120, 350, 870])
v = v.T

eq = array([
	[1, -1, 0, 0],
	[0, 1, -1, 0],
	[0, 0, 1, 0],
	[1, 0, 0, 1]])
v = dot(inv(eq), v.T)
print(v)
-- EXECUTION TIME:
1.13415
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
